# riscv-newlib

./: ChangeLog.RISCV
libgloss/riscv/: Makefile.in  _exit.c  access.c  chdir.c  chmod.c  chown.c  close.c  configure  configure.in  crt0.S  execve.c  faccessat.c  fork.c  fstat.c  fstatat.c  ftime.c  getcwd.c  getpid.c  gettimeofday.c  isatty.c  kill.c  link.c  lseek.c  lstat.c  open.c  openat.c  read.c  ri5cy-interrupts.s  sbrk.c  stat.c  syscalls.c  sysconf.c  times.c  unlink.c  utime.c  wait.c  write.c
libgloss/riscv/machine/: syscall.h
newlib/libc/machine/riscv/: Makefile.am  Makefile.in  configure  configure.in  setjmp.S
