dnl This is the newlib/libc/machine/mips configure.in file.
dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([newlib],[NEWLIB_VERSION])
AC_CONFIG_SRCDIR([memset.S])

AC_ARG_ENABLE(stack-erase,
[  --enable-stack-erase   Enable stack erase in longjmp],
[case "${enableval}" in
   yes) stack_erase=yes ;;
   no)  stack_erase=no  ;;
   *)   AC_MSG_ERROR(bad value ${enableval} for stack-erase) ;;
 esac],[stack_erase=no])

if test ${stack_erase} = "yes" ; then
  AC_SUBST(STACK_ERASE, -DSTACK_ERASE)
else
  AC_SUBST(STACK_ERASE, -DNO_STACK_ERASE)
fi

dnl Can't be done in NEWLIB_CONFIGURE because that confuses automake. 
AC_CONFIG_AUX_DIR(../../../..)



NEWLIB_CONFIGURE(../../..)
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
